crates/hdx_ast/tests/snapshots/basic_snapshots__basic_vars.snap
---
source: crates/hdx_ast/tests/basic_snapshots.rs
expression: result.output.unwrap()
---
{
  "type": "stylesheet",
  "rules": [
    {
      "type": "stylerule",
      "selectors": [
        {
          "components": [
            {
              "type": "tag",
              "value": {
                "Html": {
                  "Hr": {
                    "kind": "Ident",
                    "offset": 0,
                    "len": 2
                  }
                }
              }
            }
          ],
          "comma": null
        }
      ],
      "type": "style-declaration",
      "open": {
        "kind": "LeftCurly",
        "len": 1
      },
      "declarations": [
        {
          "type": "property",
          "name": {
            "kind": "Ident",
            "offset": 7,
            "len": 10
          },
          "colon": {
            "kind": "Colon",
            "len": 1
          },
          "value": {
            "values": [
              {
                "kind": "Whitespace",
                "len": 1
              },
              {
                "type": "Function",
                "name": {
                  "kind": "Function",
                  "offset": 19,
                  "len": 16
                },
                "values": [
                  {
                    "kind": "Ident",
                    "offset": 35,
                    "len": 2
                  },
                  {
                    "kind": "Whitespace",
                    "len": 1
                  },
                  {
                    "kind": "Ident",
                    "offset": 38,
                    "len": 5
                  },
                  {
                    "kind": "Comma",
                    "len": 1
                  },
                  {
                    "kind": "Whitespace",
                    "len": 1
                  },
                  {
                    "kind": "Ident",
                    "offset": 45,
                    "len": 11
                  },
                  {
                    "kind": "Comma",
                    "len": 1
                  },
                  {
                    "kind": "Whitespace",
                    "len": 1
                  },
                  {
                    "type": "Function",
                    "name": {
                      "kind": "Function",
                      "offset": 58,
                      "len": 4
                    },
                    "values": [
                      {
                        "kind": "Ident",
                        "offset": 62,
                        "len": 14
                      }
                    ],
                    "close_paren": {
                      "kind": "RightParen",
                      "len": 1
                    }
                  },
                  {
                    "kind": "Whitespace",
                    "len": 1
                  },
                  {
                    "kind": "Dimension",
                    "offset": 78,
                    "len": 3,
                    "unit": "%"
                  },
                  {
                    "kind": "Comma",
                    "len": 1
                  },
                  {
                    "kind": "Whitespace",
                    "len": 1
                  },
                  {
                    "type": "Function",
                    "name": {
                      "kind": "Function",
                      "offset": 83,
                      "len": 4
                    },
                    "values": [
                      {
                        "kind": "Ident",
                        "offset": 87,
                        "len": 14
                      }
                    ],
                    "close_paren": {
                      "kind": "RightParen",
                      "len": 1
                    }
                  },
                  {
                    "kind": "Whitespace",
                    "len": 1
                  },
                  {
                    "kind": "Dimension",
                    "offset": 103,
                    "len": 3,
                    "unit": "%"
                  },
                  {
                    "kind": "Comma",
                    "len": 1
                  },
                  {
                    "kind": "Whitespace",
                    "len": 1
                  },
                  {
                    "kind": "Ident",
                    "offset": 108,
                    "len": 11
                  }
                ],
                "close_paren": {
                  "kind": "RightParen",
                  "len": 1
                }
              }
            ]
          },
          "important": null,
          "semicolon": {
            "kind": "Semicolon",
            "len": 1
          }
        }
      ],
      "rules": [],
      "close": {
        "kind": "RightCurly",
        "len": 1
      }
    }
  ]
}
